tests/requests/snapshots/can_delete_article@articles_request.snap
---
source: tests/requests/articles.rs
expression: "(delete_article_request.status_code(), delete_article_request.text())"
---
(
    200,
    "",
)
