tests/requests/snapshots/can_get_article@articles_request.snap
---
source: tests/requests/articles.rs
expression: "(add_article_request.status_code(), add_article_request.text())"
---
(
    200,
    "{\"created_at\":\"DATE\",\"updated_at\":\"DATE\",\"id\":ID,\"title\":\"Loco article 1\",\"content\":\"Loco article 1 content\"}",
)
